--- a/connection.html
+++ b/connection.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style_connections.css">
+    <script src="https://kit.fontawesome.com/97c2cfe72c.js" crossorigin="anonymous"></script>
     <script src="connections.js" defer></script>
 </head>
-
+<header>
+    <a href="#" class="logo">LIT PLANNER</a>
+    <div class="dropdown">
+        <button class="dropbtn">My planner</button>
+        <div class="dropdown-content">
+            <a href="form.html">Planner</a>
+            <a href="network.html">Network</a>
+            <a href="travel.html">Travel</a>
+            <a href="connect.html">Connect</a>
+            <a href="index.html">Log out</a>
+        </div>
+    </div>
+    <div class="bx bx-menu" id="menu-icon"></div>
+</header>
 <body style="background-color: purple;">
     <div class="connections-page">
         <div class="content-container">
@@ -29,5 +43,16 @@
             </div>
         </div>
     </div>
+    <section>
+        <footer>
+          <h2>Plan. Connect. Inspire</h2>
+          <div class="socialmidia">
+            <a href="#"><i  class="fa-brands fa-facebook fa-2xl"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter fa-2xl"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter fa-2xl"></i></a>
+            <p>All Copyrights reserved &copy 2024 LIT - Leading Planner for Women in Tech</p>
+        </footer>
+      </section>
 </body>
 </html>
