--- a/connection.html
+++ b/connection.html
@@ -9,17 +9,18 @@
     <script src="connections.js" defer></script>
 </head>
 <header>
-    <a href=“#” class=“logo”>LIT PLANNER</a>
-    <div class=“dropdown”>
-        <button class=“dropbtn”>My planner</button>
-        <div class=“dropdown-content”>
-            <a href=“planner.html”>Planner</a>
-            <a href=“travel.html”>Travel</a>
-            <a href=“connection.html”>Connect</a>
-            <a href=“index.html”>Log out</a>
+    <a href="#" class="logo">LIT PLANNER</a>
+    <div class="dropdown">
+        <button class="dropbtn">My planner</button>
+        <div class="dropdown-content">
+            <a href="form.html">Planner</a>
+            <a href="network.html">Network</a>
+            <a href="travel.html">Travel</a>
+            <a href="connect.html">Connect</a>
+            <a href="index.html">Log out</a>
         </div>
     </div>
-    <div class=“bx bx-menu” id=“menu-icon”></div>
+    <div class="bx bx-menu" id="menu-icon"></div>
 </header>
 <body style="background-color: purple;">
     <div class="connections-page">
